# retro-speedlab

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  app.py  config.yaml  pyproject.toml  run.bat  run.ps1  run.sh
{{cookiecutter.project_slug}}/game/: __init__.py
{{cookiecutter.project_slug}}/model/: __init__.py
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/src/game/: __init__.py  actions.py  wrapper.py
{{cookiecutter.project_slug}}/src/ram/: __init__.py  airstriker.py
{{cookiecutter.project_slug}}/src/states/: __init__.py  survive.py
